# Agent-toolkit

./: Cargo.toml  README.md
src/: main.rs
src/document_parsing/: mod.rs
src/document_parsing/parsers/: csv_parser.rs  docx.rs  html.rs  json_parser.rs  markdown.rs  mod.rs  pdf.rs  plain_text.rs  pptx.rs  xlsx.rs  xml.rs
test_files/: sample.csv  sample.html  sample.json  sample.md  sample.txt  sample.xml
